--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h2{
 	text-indent: 50px;
 	border-radius: 50%;
 	margin-top: 20px;
+	margin: 0px 120px;
+	width: 250px;
+	height: 300px;
+	float: left;
 }
 
 h3{
